# headwind

./: .editorconfig  .gitignore  .krew.yaml  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  HELM_REPO.md  KUBECTL_PLUGIN.md  LICENSE  Makefile  README.md  SETUP.md  deny.toml  kubectl-headwind  rustfmt.toml  test-busybox-http.yaml  test-busybox-oci.yaml  test-deployment.yaml  test-helmrelease.yaml  test-podinfo-helmrelease.yaml
.github/: cr.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/issues/: 01-webhook-controller-integration.md  02-implement-update-application.md  03-min-update-interval.md  04-integration-tests.md  05-helm-support.md  06-web-dashboard.md  07-notification-system.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy-docs.yml  docker.yml  helm-release.yml  release.yml  security.yml
charts/headwind/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  headwind-secrets.yaml.example  namespace.yaml  rbac.yaml  service.yaml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/blog/: authors.yml
examples/: GETTING-STARTED.md  deployment-with-headwind.yaml  generate_helmrepo_crd.rs  notification-configmap.yaml  test-monitored-deployment.yaml  updaterequest.yaml
scripts/: test-crd.sh
src/: lib.rs  main.rs
tests/: policy_integration_test.rs  rollback_integration_test.rs  webhook_integration_test.rs
(+62 files in other folders)
